[gd_scene load_steps=2 format=3 uid="uid://ck8tr30mkfxns"]

[ext_resource type="Script" path="res://Art/CanvasLayer.gd" id="2_xarpf"]

[node name="MainMenu" type="Node"]

[node name="Background" type="TextureRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
expand_mode = 1

[node name="CanvasLayer" type="CanvasLayer" parent="."]
script = ExtResource("2_xarpf")

[node name="Main" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 107.0
offset_top = 59.0
offset_right = 107.0
offset_bottom = 59.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.25, 0.25)
metadata/_edit_group_ = true

[node name="CenterContainer" type="CenterContainer" parent="CanvasLayer/Main"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="CanvasLayer/Main/CenterContainer"]
custom_minimum_size = Vector2(512, 256)
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/Main/CenterContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Main/CenterContainer/PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="GAME NAME" type="Label" parent="CanvasLayer/Main/CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 50
text = "Game Demo"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PLAY" type="Button" parent="CanvasLayer/Main/CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "PLAY"

[node name="HOW TO PLAY" type="Button" parent="CanvasLayer/Main/CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "HOW TO PLAY"

[node name="EXIT" type="Button" parent="CanvasLayer/Main/CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "EXIT
"

[node name="HOW_TO_PLAY" type="Control" parent="CanvasLayer"]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.25, 0.25)

[node name="CenterContainer" type="CenterContainer" parent="CanvasLayer/HOW_TO_PLAY"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 428.0
offset_top = 236.0
offset_right = 428.0
offset_bottom = 236.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="CanvasLayer/HOW_TO_PLAY/CenterContainer"]
custom_minimum_size = Vector2(512, 256)
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/HOW_TO_PLAY/CenterContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/HOW_TO_PLAY/CenterContainer/PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="GAME NAME" type="Label" parent="CanvasLayer/HOW_TO_PLAY/CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 50
text = "HOW TO PLAY
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="RIGHT_D" type="Label" parent="CanvasLayer/HOW_TO_PLAY/CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 50
text = "RIGHT -> D
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="LEFT_A" type="Label" parent="CanvasLayer/HOW_TO_PLAY/CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 50
text = "LEFT -> A
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="JUMP_SPACE" type="Label" parent="CanvasLayer/HOW_TO_PLAY/CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 50
text = "JUMP -> SPACE
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="BACK" type="Button" parent="CanvasLayer/HOW_TO_PLAY/CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "BACK

"

[connection signal="pressed" from="CanvasLayer/Main/CenterContainer/PanelContainer/MarginContainer/VBoxContainer/PLAY" to="CanvasLayer" method="_on_play_pressed"]
[connection signal="pressed" from="CanvasLayer/Main/CenterContainer/PanelContainer/MarginContainer/VBoxContainer/HOW TO PLAY" to="CanvasLayer" method="_on_how_to_play_pressed"]
[connection signal="pressed" from="CanvasLayer/Main/CenterContainer/PanelContainer/MarginContainer/VBoxContainer/EXIT" to="CanvasLayer" method="_on_exit_pressed"]
[connection signal="pressed" from="CanvasLayer/HOW_TO_PLAY/CenterContainer/PanelContainer/MarginContainer/VBoxContainer/BACK" to="CanvasLayer" method="_on_back_pressed"]
